--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "astro": "^5.13.2",
     "tailwindcss": "^4.1.1",
     "typescript": "^5.5.3"
+  },
+  "overrides": {
+    "path-to-regexp": "^6.2.3"
   }
 }
