--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@astrojs/vercel": "^8.2.6",
     "@fontsource-variable/onest": "^5.0.4",
     "@tailwindcss/vite": "^4.1.1",
-    "astro": "^5.13.2",
+    "astro": "^5.13.4",
     "tailwindcss": "^4.1.1",
     "typescript": "^5.5.3"
+  },
+  "overrides": {
+    "devalue": "5.3.2",
+    "path-to-regexp": "^6.2.3"
   }
 }
